@@ -1,5 +1,10 @@
 2004-09-17  Dan Doel  <dolio@case.edu>
 
+	* xcompmgr.c: (usage):
+	Changed the usage function to describe the available options.
+
+2004-09-17  Dan Doel  <dolio@case.edu>
+
 	* xcompmgr.c: (shadow_picture):
 	Added some tests to check for failed pixmap/picture/gc allocations and
 	exit appropriately.
